fix menu overflow and body not taking full height

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,9 @@ section {
   margin: 30px auto;
   min-width: 75%;
 }
-
+.last {
+  margin-bottom: 0;
+}
 .hidden {
   /* position: fixed; */
   overflow-y: hidden;
