--- a/src/index.css
+++ b/src/index.css
@@ -5,20 +5,18 @@
 * {
   box-sizing: border-box;
   margin: 0;
+  padding: 0;
 }
 html * {
   font-family: "Honoka";
 }
 html,
 body {
-  min-height: 100%;
+  min-height: 100vh;
 }
 
 body {
   position: relative;
-  width: 100%;
-  /* padding-bottom: 60px; */
-  background-color: white;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
